src/objects/OCIO_Title_VI_Submission__c.object
<CustomObject>
    <description>This object is for the Office of Civil Rights - Title VI application and used to track Title VI Compliance Submissions submitted by the donees.</description>
    <fields>
        <fullName>OCR_Administrative_Grievance_Procedure_D__c</fullName>
        <label>Description</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCR_Administrative_Grievance_Procedure__c</fullName>
        <label>Administrative Grievance Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Cafeteria_Accessibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cafeteria Accessibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Cafeteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cafeteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_City__c</fullName>
        <formula>OCR_Donee_Account__r.BillingCity</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Classrooms_Accessibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Classrooms Accessibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Classrooms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Classrooms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Complaint_Received__c</fullName>
        <label>Complaint Received</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCR_Complaints_Filed__c</fullName>
        <label>Complaints Filed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Conference_Rooms_Accessibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conference Rooms Accessibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Conference_Rooms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conference Rooms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Donee_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donee Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Title VI Submissions</relationshipLabel>
        <relationshipName>Title_VI_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCR_Donee_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donee Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Title VI Submissions</relationshipLabel>
        <relationshipName>Title_VI_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCR_Elevators_Accessibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elevators Accessibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Elevators__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Elevators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Email__c</fullName>
        <formula>OCR_Donee_Contact__r.Email</formula>
        <label>E-Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Entrances_Exits_Accessibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entrances/Exits Accessibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Entrances_Exits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entrances/Exits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Fax__c</fullName>
        <formula>OCR_Donee_Contact__r.Fax</formula>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Full_Fair_Opportunity__c</fullName>
        <label>Full/Fair Opportunity</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCR_Hallways_Accessibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hallways Accessibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Hallways__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hallways</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Hard_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hard Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Hearing_Visual_Impaired_Assistance__c</fullName>
        <label>Hearing/Visual Impaired Assistance</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCR_How_Did_You_Learn_Other__c</fullName>
        <inlineHelpText>If Other please explain</inlineHelpText>
        <label>How Did You Learn - Other</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCR_How_Did_You_Learn__c</fullName>
        <label>How Did You Learn</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>Information Briefing/Presentation</fullName>
                </value>
                <value>
                    <fullName>Television or radio</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Information_Unavailable__c</fullName>
        <label>Information Unavailable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_LEP_Actual_Cost__c</fullName>
        <label>LEP Actual Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCR_LEP_Additional_Cost__c</fullName>
        <label>LEP Additional Cost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_LEP_Notification_Method_Other__c</fullName>
        <inlineHelpText>If other, please explain:</inlineHelpText>
        <label>LEP Notification Method - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OCR_LEP_Notification_Method__c</fullName>
        <label>LEP Notification Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post Written Notice in Non-English Lang</fullName>
                </value>
                <value>
                    <fullName>Brochure</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Languages_Most_Encountered__c</fullName>
        <label>Languages Most Encountered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Lanuage_Other__c</fullName>
        <inlineHelpText>If other language, please explain:</inlineHelpText>
        <label>Language Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OCR_Limited_English_Proficiency__c</fullName>
        <label>Limited English Proficiency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Lounges_Accessibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lounges Accessibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Lounges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lounges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Market_Advertise__c</fullName>
        <label>Market/Advertise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Number_of_Hours__c</fullName>
        <label>Number of Hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Number_of_Minutes__c</fullName>
        <label>Number of Minutes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Number_of_Reviews__c</fullName>
        <description>Get the number of reviews for the Title VI Submission form.</description>
        <label>Number of Reviews</label>
        <summaryForeignKey>OCIO_Title_VI_Review__c.OCR_Title_VI_Submission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCR_Organization_Name__c</fullName>
        <formula>OCR_Donee_Account__r.Name</formula>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Organizational_Background__c</fullName>
        <inlineHelpText>Please describe the nature and purpose of your agency/organization, to include programs and activities conducted by your agency/organization.</inlineHelpText>
        <label>Organizational Background</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCR_Organizational_Type_Other__c</fullName>
        <inlineHelpText>If other, please explain:</inlineHelpText>
        <label>Organizational Type - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OCR_Organizational_Type__c</fullName>
        <inlineHelpText>Please mark one or more of the following categories that best describes the “organizational type” for your agency/organization:</inlineHelpText>
        <label>Organizational Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State Government Agency</fullName>
                </value>
                <value>
                    <fullName>County or City Government Agency</fullName>
                </value>
                <value>
                    <fullName>Non-profit Organization</fullName>
                </value>
                <value>
                    <fullName>Healthcare-related Provider</fullName>
                </value>
                <value>
                    <fullName>Educational Provider</fullName>
                </value>
                <value>
                    <fullName>Provider to the Homeless or Impoverished</fullName>
                </value>
                <value>
                    <fullName>Minority-focused</fullName>
                </value>
                <value>
                    <fullName>Women-focused</fullName>
                </value>
                <value>
                    <fullName>Program for Older Individuals</fullName>
                </value>
                <value>
                    <fullName>Individuals with Disabilities-focused</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Parking_Accessibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parking Accessibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Parking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Plan_for_Collecting_Data__c</fullName>
        <label>Plan for Collecting Data</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCR_Pop_American_Indian_or_Alaska_Native__c</fullName>
        <defaultValue>0</defaultValue>
        <label>American Indian or Alaska Native</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_Pop_Asian__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Asian</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_Pop_Non_Hispanic_or_Non_Latino__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non-Hispanic or Non-Latino</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_Preparation_Date__c</fullName>
        <label>Preparation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OCR_Problems_Experienced__c</fullName>
        <label>Problems Experienced</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Property_Availability__c</fullName>
        <label>Property Availability</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Property_Quality__c</fullName>
        <label>Property Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Restrooms_Accessibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restrooms Accessibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Restrooms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restrooms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Rollout_Name__c</fullName>
        <formula>OCR_Rollout__r.Name</formula>
        <label>Rollout Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Rollout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rollout</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Title VI Submissions</relationshipLabel>
        <relationshipName>Title_VI_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCR_State__c</fullName>
        <formula>OCR_Donee_Account__r.BillingState</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Street_Address__c</fullName>
        <formula>OCR_Donee_Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OCR_Submission_Status__c</fullName>
        <label>Submission Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Activity</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Telephone_Accessibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telephone Accessibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Telephone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telephone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Training_Educational_Programs_Desc__c</fullName>
        <label>Training/Educational Program Description</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCR_Training_Educational_Programs__c</fullName>
        <label>Training/Educational Programs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Trans_Interpretation_Assis_Other__c</fullName>
        <inlineHelpText>If other, please explain:</inlineHelpText>
        <label>Trans/Interpretation Assis - Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OCR_Translation_or_Interpretation_Assist__c</fullName>
        <label>Translation or Interpretation Assistance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bilingual Staff</fullName>
                </value>
                <value>
                    <fullName>Contract Interpreter/Translator</fullName>
                </value>
                <value>
                    <fullName>Translated Written Materials</fullName>
                </value>
                <value>
                    <fullName>Volunteers</fullName>
                </value>
                <value>
                    <fullName>Local Community-based Organization</fullName>
                </value>
                <value>
                    <fullName>Local College/University Language Dept</fullName>
                </value>
                <value>
                    <fullName>State Agency That Provides This Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OCR_Unavailable_Data__c</fullName>
        <label>Unavailable Data</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCR_Water_Fountains_Accessibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Water Fountains Accessibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Water_Fountains__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Water Fountains</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Work_Study_Areas_Accessibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work/Study Areas Accessibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Work_Study_areas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work/Study Areas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCR_Zip__c</fullName>
        <formula>OCR_Donee_Account__r.BillingPostalCode</formula>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_advis_American_Indian_Alaska_Native__c</fullName>
        <defaultValue>0</defaultValue>
        <label>American Indian or Alaska Native</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_advis_Asian__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Asian</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_advis_Black_or_African_American__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Black or African American</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_advis_Female__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Female</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_advis_Hispanic_or_Latino__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hispanic or Latino</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_advis_Male__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Male</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_advis_Native_Hawaiian_Other_Pacific__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Native Hawaiian / Other Pacific Islander</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_advis_Non_Hispanic_or_Non_Latino__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non-Hispanic or Non-Latino</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_advis_White__c</fullName>
        <defaultValue>0</defaultValue>
        <label>White</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_phone__c</fullName>
        <formula>OCR_Donee_Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_pop_Black_or_African_American__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Black or African American</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_pop_Female__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Female</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_pop_Hispanic_or_Latino__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hispanic or Latino</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_pop_Male__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Male</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_pop_Native_Hawaiian_Pacific_Islande__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Native Hawaiian / Other Pacific Islander</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCR_pop_White__c</fullName>
        <defaultValue>0</defaultValue>
        <label>White</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Title VI Submission</label>
    <listViews>
        <fullName>All_Title_VI_Submissions</fullName>
        <columns>NAME</columns>
        <columns>OCR_Donee_Account__c</columns>
        <columns>OCR_Donee_Contact__c</columns>
        <columns>OCR_Rollout__c</columns>
        <columns>OCR_Submission_Status__c</columns>
        <columns>OCR_Preparation_Date__c</columns>
        <columns>OCR_Submission_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Title VI Submissions</label>
    </listViews>
    <listViews>
        <fullName>My_Title_VI_Submissions</fullName>
        <columns>NAME</columns>
        <columns>OCR_Donee_Account__c</columns>
        <columns>OCR_Donee_Contact__c</columns>
        <columns>OCR_Rollout__c</columns>
        <columns>OCR_Preparation_Date__c</columns>
        <columns>OCR_Submission_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Title VI Submissions</label>
    </listViews>
    <nameField>
        <displayFormat>TVIS-{0000000}</displayFormat>
        <label>Title VI Submission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Title VI Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Allow_only_one_Review_per_Submission</fullName>
        <active>true</active>
        <description>There can be only one Review per Submission record.</description>
        <errorConditionFormula>OCR_Number_of_Reviews__c &gt; 1</errorConditionFormula>
        <errorMessage>One Title VI Submission can have only one Review.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delete_LEP_Notif_Other_Info_if_Not_Other</fullName>
        <active>true</active>
        <description>If LEP Notification Method does not include &quot;Other&quot;, then the LEP Notification Method - Other field should be empty.</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK( OCR_LEP_Notification_Method_Other__c )), NOT(INCLUDES(  OCR_LEP_Notification_Method__c , &apos;Other&apos;))), true, IF(AND((ISBLANK(OCR_LEP_Notification_Method_Other__c)), (INCLUDES( OCR_LEP_Notification_Method__c, &apos;Other&apos;))), true, false))</errorConditionFormula>
        <errorMessage>LEP Notification Method - Other field value is required only if Other is selected in LEP Notification Method field and should be empty otherwise.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delete_Lang_Other_Info_if_Lang_Not_Other</fullName>
        <active>true</active>
        <description>Language - Other field value is required only if Other is selected in Language Most Encountered field and should be empty otherwise.</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(OCR_Lanuage_Other__c)), NOT(INCLUDES(  OCR_Languages_Most_Encountered__c, &apos;Other&apos;))), true, IF(AND((ISBLANK(OCR_Lanuage_Other__c)), (INCLUDES( OCR_Languages_Most_Encountered__c, &apos;Other&apos;))), true, false))</errorConditionFormula>
        <errorMessage>Language - Other field value is required only if Other is selected in Language Most Encountered field and should be empty otherwise.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delete_Org_Type_Other_Info_if_Not_Other</fullName>
        <active>true</active>
        <description>If Organization Type does not include &quot;Other&quot;, then the Organizational Type - Other field should be empty.</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(OCR_Organizational_Type_Other__c)), NOT(INCLUDES( OCR_Organizational_Type__c, &apos;Other&apos;))), true, IF(AND((ISBLANK(OCR_Organizational_Type_Other__c)), (INCLUDES( OCR_Organizational_Type__c, &apos;Other&apos;))), true, false))</errorConditionFormula>
        <errorMessage>Organization Type - Other field value is required only if Other is selected in Organization Type field and should be empty otherwise.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delete_Trans_Other_Info_if_Not_Other</fullName>
        <active>true</active>
        <description>If Translation and Interpretation Assistance field does not include &quot;Other&quot;, then the Translation and Interpretation Assistance - Other field should be empty.</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK( OCR_Trans_Interpretation_Assis_Other__c )), NOT(INCLUDES(  OCR_Translation_or_Interpretation_Assist__c , &apos;Other&apos;))), true, IF(AND((ISBLANK(OCR_Trans_Interpretation_Assis_Other__c)), (INCLUDES( OCR_Translation_or_Interpretation_Assist__c, &apos;Other&apos;))), true, false))</errorConditionFormula>
        <errorMessage>Translation and Interpretation Assistance - Other field value is required only if Other is selected in Translation and Interpretation Assistance field and should be empty otherwise.</errorMessage>
    </validationRules>
</CustomObject>